--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install \"optimum[onnxruntime]==1.2.2\" evaluate sklearn mkl-include mkl"
+    "!pip install \"optimum[onnxruntime]==1.2.2\" evaluate sklearn mkl-include mkl tqdm"
    ]
   },
   {
@@ -60,29 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 5.81k/5.81k [00:00<00:00, 4.98MB/s]\n"
+      "/home/ubuntu/miniconda3/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('onnx/tokenizer_config.json',\n",
-       " 'onnx/special_tokens_map.json',\n",
-       " 'onnx/vocab.txt',\n",
-       " 'onnx/added_tokens.json',\n",
-       " 'onnx/tokenizer.json')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -118,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +149,7 @@
       "Using custom data configuration default\n",
       "Reusing dataset banking77 (/home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b)\n",
       "Loading cached shuffled indices for dataset at /home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b/cache-879d5f95a9fbe7e7.arrow\n",
-      "100%|██████████| 1/1 [00:00<00:00,  5.93ba/s]\n"
+      "Loading cached processed dataset at /home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b/cache-a6a114c6cdb61d64.arrow\n"
      ]
     },
     {
@@ -241,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +237,7 @@
        "PosixPath('onnx/model-quantized.onnx')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +311,7 @@
        "[{'label': 'exchange_rate', 'score': 0.9802021384239197}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,8 +321,9 @@
     "from transformers import pipeline, AutoTokenizer\n",
     "\n",
     "model = ORTModelForSequenceClassification.from_pretrained(onnx_path,file_name=\"model-quantized.onnx\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(onnx_path)\n",
     "\n",
-    "clx = pipeline(\"text-classification\",model=model, tokenizer=quantizer.tokenizer)\n",
+    "clx = pipeline(\"text-classification\",model=model, tokenizer=tokenizer)\n",
     "\n",
     "clx(\"What is the exchange rate like on this app?\")"
    ]
@@ -352,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -430,9 +418,9 @@
      "output_type": "stream",
      "text": [
       "Payload sequence length: 128\n",
-      "Vanilla model: P95 latency (ms) - 86.7772593483096; Average latency (ms) - 62.55 +\\- 8.66;\n",
-      "Quantized model: P95 latency (ms) - 27.027633551188046; Average latency (ms) - 26.17 +\\- 0.66;\n",
-      "Improvement through quantization: 2.39x\n"
+      "Vanilla model: P95 latency (ms) - 75.69221085868777; Average latency (ms) - 57.52 +\\- 6.16;\n",
+      "Quantized model: P95 latency (ms) - 26.75848939397838; Average latency (ms) - 24.86 +\\- 1.25;\n",
+      "Improvement through quantization: 2.83x\n"
      ]
     }
    ],
@@ -458,7 +446,7 @@
     "    time_avg_ms = 1000 * np.mean(latencies)\n",
     "    time_std_ms = 1000 * np.std(latencies)\n",
     "    time_p95_ms = 1000 * np.percentile(latencies,95)\n",
-    "    return f\"P95 latency (ms) - {time_p95_ms}; Average latency (ms) - {time_avg_ms:.2f} +\\- {time_std_ms:.2f};\", time_avg_ms\n",
+    "    return f\"P95 latency (ms) - {time_p95_ms}; Average latency (ms) - {time_avg_ms:.2f} +\\- {time_std_ms:.2f};\", time_p95_ms\n",
     "\n",
     "vanilla_clx = pipeline(\"text-classification\",model=model_id)\n",
     "\n",
@@ -475,9 +463,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We managed to accelerate our model latency from 117.61ms to 64.94ms or roughly 2x while keeping 99.61% of the accuracy. \n",
+    "We managed to accelerate our model latency from 75.69ms to 26.75ms or 2.83x while keeping 99.72% of the accuracy. \n",
     "\n",
-    "![performance](assets/performance_latency.png)"
+    "![performance](assets/performance.png)"
    ]
   },
   {
