--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install \"optimum[onnxruntime]==1.2.2\" evaluate sklearn mkl-include mkl tqdm"
+    "!pip install \"optimum[onnxruntime]==1.2.2\" evaluate[evaluator] sklearn mkl-include mkl"
    ]
   },
   {
