--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configure static quantization & run Calibration of quantization ranges\n",
+    "## 3. Configure static quantization & run Calibration of quantization ranges\n",
     "\n",
     "Post-training static quantization compared to dynamic quantization not only involves converting the weights from float to int, but also performing an first additional step of feeding the data through the model to compute the distributions of the different activations (calibration ranges). These distributions are then used to determine how the different activations should be quantized at inference time. \n",
     "Importantly, this additional step allows us to pass quantized values between operations instead of converting these values to floats - and then back to ints - between every operation, resulting in a significant speed-up.\n",
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use the ORTQuantizer to apply static quantization\n",
+    "## 4. Use the ORTQuantizer to apply static quantization\n",
     "\n",
     "After we have calculated our calibration tensor ranges we can quantize our model using the `ORTQuantizer`. "
    ]
