--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -64,12 +64,32 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/miniconda3/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa61d2968f4c4f4cb5e85d4c4d5c6f62",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/5.81k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('onnx/tokenizer_config.json',\n",
+       " 'onnx/special_tokens_map.json',\n",
+       " 'onnx/vocab.txt',\n",
+       " 'onnx/added_tokens.json',\n",
+       " 'onnx/tokenizer.json')"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -105,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +140,7 @@
     "    format=QuantFormat.QOperator,\n",
     "    mode=QuantizationMode.QLinearOps,\n",
     "    per_channel=True,\n",
-    "    operators_to_quantize=[\"MatMul\", \"Add\" ]\n",
+    "    operators_to_quantize=[\"MatMul\", \"Add\"]\n",
     "    )"
    ]
   },
@@ -139,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +257,7 @@
        "PosixPath('onnx/model-quantized.onnx')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +331,7 @@
        "[{'label': 'exchange_rate', 'score': 0.9802021384239197}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -418,9 +438,9 @@
      "output_type": "stream",
      "text": [
       "Payload sequence length: 128\n",
-      "Vanilla model: P95 latency (ms) - 75.69221085868777; Average latency (ms) - 57.52 +\\- 6.16;\n",
-      "Quantized model: P95 latency (ms) - 26.75848939397838; Average latency (ms) - 24.86 +\\- 1.25;\n",
-      "Improvement through quantization: 2.83x\n"
+      "Vanilla model: P95 latency (ms) - 57.73262889997568; Average latency (ms) - 55.87 +\\- 1.06;\n",
+      "Quantized model: P95 latency (ms) - 26.99123245693046; Average latency (ms) - 25.57 +\\- 3.86;\n",
+      "Improvement through quantization: 2.14x\n"
      ]
     }
    ],
@@ -618,7 +638,7 @@
    "hash": "7a2c4b191d1ae843dde5cb5f4d1f62fa892f6b79b0f9392a84691e890e33c5a4"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -632,7 +652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
